# 6.824

./: .gitignore  .gitmodules
MapReduce/: CMakeLists.txt  common.h  main_client.cpp  main_server.cpp  master.cpp  master.h  master_main.cpp  rpc.h  test.cpp  wc.hpp  worker.cpp  worker.h  worker_main.cpp  zyk.txt
MapReduce/test/: CMakeLists.txt  main_client.cpp  main_server.cpp  master_main.cpp  worker_main.cpp
Raft/: CMakeLists.txt  Log.h  Raft.cpp  Raft.h  Rpc.h  Timer.hpp  Util.h
Raft/tests/: CMakeLists.txt  Channel_test.cpp  Time_test.cpp  main_client.cpp  main_server.cpp  raft_test.cpp  test.cpp
buttonrpc/: Serializer.hpp  buttonrpc.hpp
